2000-05-16  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/message.el (message-forward) Replace the use of `eolp' with
	`bolp' for detecting the start of the line.
	(message-indent-citation): Ditto.

2000-05-10   Daiki Ueno  <ueno@unixuser.org>

	* lisp/gnus-bbdb.el (gnus-bbdb/pop-up-bbdb-buffer): Don't bind
	`bbdb-use-pop-up' while executing `bbdb-pop-up-bbdb-buffer'.

2000-05-10  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-msg.el (gnus-debug): Break MIME tags from the snoopies.
	(gnus-bug): Insert text/plain tag at the end of the buffer.

2000-05-10  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 01.

2000-05-10  Keiichi Suzuki  <keiichi@mdcnet.co.jp>

	* lisp/message.el (message-list-references): Do not insert
	duplicate Message-Id, when specified
	`message-list-references-add-position'.

	* lisp/gnus-bbdb.el (gnus-bbdb/split-mail): Support group address.
	(gnus-bbdb/insert-address-regexp): New function.

2000-05-09  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-msg.el (gnus-debug): Add "nntp.el" and `defvoo'.

2000-05-08  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (T-gnus): Update to 6.14.4.

	* README.T-gnus: Update.

	* lisp/{webmail.el,rfc2047.el,nnmbox.el,nndoc.el,mml.el,mm-view.el,
	mm-partial.el,mm-decode.el,mm-bodies.el,message.el,lpath.el,
	gnus.el,gnus-vers.el,gnus-util.el,gnus-start.el,gnus-score.el,
	gnus-msg.el,gnus-mailcap.el,gnus-ems.el,gnus-draft.el,gnus-art.el,
	ChangeLog}: Sync up with Gnus v5.8.6.
	* texi/{postamble.tex,message.texi,message-ja.texi,gnusref.tex,
	gnus.texi,gnus-ja.texi,emacs-mime.texi,Makefile.in,ChangeLog}: Sync
	up with Gnus v5.8.6.

2000-04-28  Katsumi Yamaoka <yamaoka@jpl.org>

	* texi/gnus.texi, texi/gnus-ja.texi, texi/gnus-faq-ja.texi, README:
	You might be able to use T-gnus with the versions of XEmacs prior
	to 21.1.1.

	* contrib/timer.el: New file. Imported from fsf-compat-1.07-pkg.

2000-04-27  Katsumi Yamaoka <yamaoka@jpl.org>
